add notfication function to user and employee and some detailes in employee and order
